--- a/millet/millet-ucapi/src/main/resources/application.properties
+++ b/millet/millet-ucapi/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/qg_goods_db?useUnicode=true&amp;characterEncoding=utf8&amp;useSSL=false&amp;serverTimezone=GMT
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
