--- a/millet/pom.xml
+++ b/millet/pom.xml
@@ -64,16 +64,26 @@
                 <version>1.0</version>
             </dependency>
             <!--通用Mapper -->
+<!--            <dependency>-->
+<!--                <groupId>tk.mybatis</groupId>-->
+<!--                <artifactId>mapper</artifactId>-->
+<!--                <version>3.4.0</version>-->
+<!--            </dependency>-->
             <dependency>
                 <groupId>tk.mybatis</groupId>
-                <artifactId>mapper</artifactId>
-                <version>3.4.0</version>
+                <artifactId>mapper-spring-boot-starter</artifactId>
+                <version>2.1.5</version>
             </dependency>
             <!--分页-->
+<!--            <dependency>-->
+<!--                <groupId>com.github.pagehelper</groupId>-->
+<!--                <artifactId>pagehelper</artifactId>-->
+<!--                <version>4.0.0</version>-->
+<!--            </dependency>-->
             <dependency>
                 <groupId>com.github.pagehelper</groupId>
-                <artifactId>pagehelper</artifactId>
-                <version>4.0.0</version>
+                <artifactId>pagehelper-spring-boot-starter</artifactId>
+                <version>1.2.5</version>
             </dependency>
 
         </dependencies>
