--- a/millet/pom.xml
+++ b/millet/pom.xml
@@ -15,6 +15,12 @@
     <packaging>pom</packaging>
     <description>Demo project for Spring Boot</description>
 
+    <modules>
+        <module>millet-kafka</module>
+        <module>millet-ucapi</module>
+
+    </modules>
+
     <properties>
         <java.version>1.8</java.version>
     </properties>
@@ -84,6 +90,12 @@
                 <groupId>com.github.pagehelper</groupId>
                 <artifactId>pagehelper-spring-boot-starter</artifactId>
                 <version>1.2.5</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka -->
+            <dependency>
+                <groupId>org.springframework.kafka</groupId>
+                <artifactId>spring-kafka</artifactId>
+                <version>2.3.1.RELEASE</version>
             </dependency>
 
         </dependencies>
