--- a/millet/pom.xml
+++ b/millet/pom.xml
@@ -97,6 +97,13 @@
                 <artifactId>spring-kafka</artifactId>
                 <version>2.3.1.RELEASE</version>
             </dependency>
+            <!-- 配置文件自动映射 -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-configuration-processor</artifactId>
+                <version>2.2.0.RELEASE</version>
+                <optional>true</optional>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
