登陆拦截器

--- a/millet/millet-ucapi/src/main/resources/application.yml
+++ b/millet/millet-ucapi/src/main/resources/application.yml
@@ -18,13 +18,10 @@ pagehelper:
 
 config:
   path:
-    #该路径下GET请求放行，其他拦截
-    normal:
-
     #该路径下任何类型请求均拦截
-    special:
-      - /showUser
-      - /goodsType
+    include:
+      - /goodsType/**
+      - /role
     #该路径下任何请求均放行
     exclude:
       - /mybatisPlus
