--- a/millet/millet-ucapi/src/main/resources/application.yml
+++ b/millet/millet-ucapi/src/main/resources/application.yml
@@ -5,6 +5,12 @@ spring:
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
 
+server:
+  port: 8080
+  address: localhost
+  servlet:
+    context-path: /ucapi
+
 mybatis:
   typeAliasesPackage: com.zmm.milletucapi.entity
   mapperLocations : classpath:/mapper/*.xml
